force-app/main/default/objects/Transaction_Management__c/Transaction_Management__c.object-meta.xml
<CustomObject>
    <label>Transaction Management</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>