force-app/main/default/objects/Transaction_Management__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ANI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>