force-app/main/default/objects/Transaction_Management__c/fields/CallID__c.field-meta.xml
<CustomField>
    <fullName>CallID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CallID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>