force-app/main/default/objects/Transaction_Management__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transaction Managements</relationshipLabel>
    <relationshipName>Transaction_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>