force-app/main/default/objects/Transaction_Management__c/fields/Contact_Direction__c.field-meta.xml
<CustomField>
    <fullName>Contact_Direction__c</fullName>
    <description>Need to be discussed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Direction</label>
    <type>TextArea</type>
</CustomField>