force-app/main/default/objects/Transaction_Management__c/fields/ContactChannel__c.field-meta.xml
<CustomField>
    <fullName>ContactChannel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactChannel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>