force-app/main/default/objects/Transaction_Management__c/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <formula>TFN__r.Toll_Free_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNIS</label>
    <type>Text</type>
</CustomField>