force-app/main/default/objects/Transaction_Management__c/fields/Operating_Company1__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company1__c</fullName>
    <formula>text(Operating_Company__r.OperatingCompany__c)</formula>
    <label>Operating Company</label>
    <type>Text</type>
</CustomField>