force-app/main/default/objects/Transaction_Management__c/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Company</label>
    <referenceTo>Operating_Company__c</referenceTo>
    <relationshipLabel>Transaction Managements</relationshipLabel>
    <relationshipName>Transaction_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>