force-app/main/default/objects/Transaction_Management__c/fields/TFN__c.field-meta.xml
<CustomField>
    <fullName>TFN__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DNIS</label>
    <referenceTo>TFN__c</referenceTo>
    <relationshipLabel>Transaction Managements</relationshipLabel>
    <relationshipName>Transaction_Managements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>